err/ndg-xacml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ndg'...
Listing './lib/python3.5/site-packages/ndg/xacml'...
Listing './lib/python3.5/site-packages/ndg/xacml/core'...
Listing './lib/python3.5/site-packages/ndg/xacml/core/context'...
Listing './lib/python3.5/site-packages/ndg/xacml/core/documentation'...
Listing './lib/python3.5/site-packages/ndg/xacml/core/functions'...
Compiling './lib/python3.5/site-packages/ndg/xacml/core/functions/__init__.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/core/functions/__init__.py", line 680
    except (ImportError, AttributeError), e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/xacml/core/functions/v1'...
Compiling './lib/python3.5/site-packages/ndg/xacml/core/functions/v1/round.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/core/functions/v1/round.py", line 34
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/xacml/core/functions/v2'...
Compiling './lib/python3.5/site-packages/ndg/xacml/core/policybase.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/core/policybase.py", line 115
    except XacmlContextError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/xacml/finder'...
Listing './lib/python3.5/site-packages/ndg/xacml/parsers'...
Listing './lib/python3.5/site-packages/ndg/xacml/parsers/etree'...
Listing './lib/python3.5/site-packages/ndg/xacml/test'...
Listing './lib/python3.5/site-packages/ndg/xacml/test/cmip5_policyset'...
Listing './lib/python3.5/site-packages/ndg/xacml/test/context'...
Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_cmip5.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_cmip5.py", line 31
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_cmip5_opendap_only.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_cmip5_opendap_only.py", line 31
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_cmip5_policyset.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_cmip5_policyset.py", line 31
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_faam.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_faam.py", line 29
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_faam_policyset.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_faam_policyset.py", line 28
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_with_policy_set_internal_references.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_with_policy_set_internal_references.py", line 37
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_with_policy_set_nested_only.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_with_policy_set_nested_only.py", line 36
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_with_policy_set_url_references.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/context/test_pdp_with_policy_set_url_references.py", line 38
    print "Setting up"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ndg/xacml/test/faam_policyset'...
Listing './lib/python3.5/site-packages/ndg/xacml/test/functions'...
Listing './lib/python3.5/site-packages/ndg/xacml/test/policy'...
Compiling './lib/python3.5/site-packages/ndg/xacml/test/policy/test_policy.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/test/policy/test_policy.py", line 255
    except NotImplementedError, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/xacml/utils'...
Compiling './lib/python3.5/site-packages/ndg/xacml/utils/factory.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/utils/factory.py", line 122
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ndg/xacml/utils/urlfetcher.py'...
***   File "./lib/python3.5/site-packages/ndg/xacml/utils/urlfetcher.py", line 78
    except urllib2.HTTPError, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg_xacml-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
